# stargate_bot

./: .env  Cargo.toml  config.txt
src/: main.rs
src/contractss/: constants.rs  mod.rs  router.json
src/helpers_fn/: create_contract_check_balance_not_native_currency.rs  create_contract_router.rs  create_contract_router_eth.rs  create_ofc_20.rs  create_provider.rs  created_contract_for_native_currency_chain.rs  from_config_key_config_proxy.rs  from_private_key_config_proxy.rs  matching_chain_to_chain_and_stargate_chain.rs  matching_chain_to_rpc.rs  mod.rs  read_curr_from_to.rs
src/traits/: mod.rs  trait_for_user_wallet.rs  trait_for_user_wallets.rs
src/user_wallet_eth/: mod.rs  user_wallet_currency.rs  user_wallet_currency_my_middleware.rs  user_wallet_eth.rs
