[package]
name = "stargate_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4", features = ["abigen","legacy"] }
log = "0.4.17"
dotenv = "0.12.0"
env_logger = "0.10.0"
serde = {version="1.0.162",features=["derive"]}
tokio = { version = "1.28.0", features = ["full"] }
serde_json = "1.0.96"
reqwest = "0.11.17"
async-trait = "0.1.68"
tokio-stream = "0.1.14"